# prototype_assessment

./: .gitattributes  .gitignore  .vercelignore  README.md  poetry.toml  pyproject.toml  requirements.txt  vercel.json
.devcontainer/: devcontainer.json
api/: auth.py  main.py
frontend/: api_client.py  new_campaign_page.py
src/backend/: app.py  auth.py  recommender_service.py  router.py
src/docs/: AI Assignment  - sample_creator_database.csv
src/frontend/: api_client.py  existing_campaign_page.py  main.py  utils.py
